[gd_scene load_steps=5 format=3 uid="uid://k5ricjoj0tka"]

[ext_resource type="Script" path="res://projectiles/fireball/fireball.gd" id="1_gp71n"]
[ext_resource type="Texture2D" uid="uid://bivwfg2dw2d05" path="res://projectiles/fireball/fireball.png" id="1_vsxuv"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ut8ip"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_vsxuv")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_bba0g"]
radius = 3.0

[node name="Fireball" type="Area2D"]
show_behind_parent = true
position = Vector2(-2, 0)
collision_layer = 2
collision_mask = 2
script = ExtResource("1_gp71n")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ut8ip")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 0)
shape = SubResource("CircleShape2D_bba0g")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(1, -1)
metadata/_edit_group_ = true

[node name="DissipateTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="DissipateTimer" to="." method="_on_dissipate_timer_timeout"]
